# CG-SolarSystem

./: .gitignore  README.md
configs/: cylinder.xml  icosphere.xml  solar_system.xml  solar_system_icosphere.xml  test_stars.xml
convertObjTo3d/: obj_to_3d.py
engine/: CMakeLists.txt  ORGANIZATION.md  config.cpp  config.h  engine.cpp  geometry.h  input.cpp  input.h  menu.cpp  menu.h  model.cpp  model.h  rendering.cpp  rendering.h
figures/: asteroid.3d  asteroid_belt.3d  box.3d  box_2_3.3d  comets.3d  cone.3d  cone_1_2_4_3.3d  cylinder.3d  debris.3d  icosphere.3d  octahedron.3d  plane.3d  plane_2_3.3d  ring.3d  sphere.3d  sphere_1_10_10.3d  stars.3d  torus.3d
generator/: CMakeLists.txt  box.cpp  cone.cpp  cylinder.cpp  generator  generator.cpp  icosphere.cpp  octahedron.cpp  plane.cpp  ring.cpp  scatter.cpp  sphere.cpp  torus.cpp
include/: .keep  figures.h  generator_helpers.h
